5.1: ?/??/2016
	* JDBC: Fixed problem with UUID native type not using the correct persister.  Thanks Bo98. 

5.0: 6/27/2016
	* ALL: ORMLite has dropped support for Java 5.  Java 6 is now required.
	* ALL: Added boolean argument to DatabaseConnection.compileStatement(...) to fix a cache bug.
	* ALL: Changed DatabaseResults.getObjectCache() to be getObjectCacheForRetrieve() and getObjectCacheForStore().
	* CORE: Added JOIN-ing between tables _without_ a foreign-object relationship.
	* CORE: Added TimeStampStringType to support Android timestamps.
	* CORE: Added the ability to override the DataPersister as well as the FieldConverter.
	* CORE: Added support for the @Table entity from javax.persistence annotations. Thanks to wener. Bug #174.
	* CORE: Added used of java.io.Closeable to support CloseableIterator and other features for Java7 support. Thanks to livelazily.
	* CORE: Added Dao.create(Collection) method for bulk creation.  Thanks to Farrukh Najmi for the good idea.
	* CORE: Added DataType.BOOLEAN_CHAR (to support '1' '0' or 't' 'f') and BOOLEAN_INTEGER.  Thanks to stew.
	* CORE: Added support for QueryBuilder.countOf("DISTINCT(field)").  Thanks to spacetime.
	* CORE: Added support for Java 8 methods.  Thanks to VincentFTS.
	* CORE: Added support for Joda DateTime to be able to be a version field.  Thanks much to outofrange.
	* CORE: Added support for raw queries using the DatabaseResults in the mapper.  Thanks much to nonameplum.
	* CORE: Added support for the ENUM_TO_STRING type which persists Enum.toString() instead of name().  Thanks jiajia-li.
	* CORE: Added support for BigInteger to be an ID and version field by saving as string.  Thanks noordawod.
	* CORE: Added support for BYTE_ARRAY and STRING_BYTE_ARRAY data type to be ids and have default values.  Thanks noordawod.
	* CORE: Added support for table aliasing.  Thanks much to p91paul.
	* CORE: Added table-name for many ConnectionSource methods to allow partitioning and other per-table operations.