@@ -1,4 +1,5 @@
 5.1: ?/??/2016
+	* CORE: Added @DatabaseField(fullColumnDefinition) for fully describing a column as opposed to columnDefinition.
 	* JDBC: Fixed problem with UUID native type not using the correct persister.  Thanks Bo98. 
 
 5.0: 6/27/2016
